--- a/index.html
+++ b/index.html
@@ -1231,7 +1231,7 @@
 					<div class="elementor-element elementor-element-1f70f48f reveal elementor-widget elementor-widget-heading"
 						data-id="1f70f48f" data-element_type="widget" data-widget_type="heading.default">
 						<div class="elementor-widget-container">
-							<h2 class="elementor-heading-title elementor-size-default">Habib Yulianto</h2>
+							<h2 class="elementor-heading-title elementor-size-default">Ibrahim Prasetya Setiawan</h2>
 						</div>
 					</div>
 					<div class="elementor-element elementor-element-8c347a9 reveal elementor-widget elementor-widget-text-editor"
@@ -1270,7 +1270,7 @@
 									display: inline-block
 								}
 							</style>
-							<p>Putri Pertama dari Bapak Endar Setiawan</p>
+							<p>Putra Pertama dari Bapak Endar Setiawan</p>
 							<p>&amp; Ibu Indah Rosita</p>
 						</div>
 					</div>
